# ffmpeg-transcoder

./: .eslintrc.cjs  .prettierrc  index.html  package.json  pnpm-lock.yaml
src/: index.css  index.less  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  safe_exit.rs  system_tray.rs
src-tauri/src/app/: config.rs  log.rs  mod.rs  result.rs
src-tauri/src/handlers/: config.rs  error.rs  log.rs  mod.rs  store.rs
src-tauri/src/handlers/commands/: fs.rs  metadata.rs  mod.rs  particulars.rs  process.rs  system.rs  task.rs  transcode.rs
src-tauri/src/handlers/task/: item.rs  message.rs  mod.rs  state_machine.rs  store.rs  task.rs
src-tauri/src/handlers/tasks/: message.rs  mod.rs  progress.rs  state_machine.rs  store.rs  task.rs
src/components/: ComplexTaskModifier.tsx  NULLPath.tsx  TableIconPlaceholder.tsx
src/components/CollapsibleButtonGroup/: Index.less  index.less  index.tsx
src/components/task/: CodecModifier.tsx  ComplexTaskModifier.tsx  OutputFileModifier.tsx  ParamsModifier.tsx  SimpleTasksAdding.tsx  SimpleTasksModifier.tsx  index.ts  types.ts  utils.ts
src/libs/: config.ts  history.ts  metadata.ts  notification.ts  particulars.ts  preset.ts  safe_exit.tsx  system_tray.ts  utils.ts
src/libs/search/: extension_filter.ts  index.ts  regular_filter.ts  table_tree.ts
src/libs/task/: index.ts  message.ts  modifying.ts  state_machine.ts
src/router/: index.tsx
src/routes/: App.tsx  History.tsx  Particulars.tsx  Presets.tsx  Queue.tsx  Settings.tsx
src/routes/Presets/: DefaultCodec.tsx  EditableCell.tsx  EditableRow.tsx  GlobalOperations.tsx  Operations.tsx  Sortable.tsx  index.tsx
src/routes/Queue/: ComplexTaskEditor.tsx  Details.tsx  Operations.tsx  Progress.tsx  Settings.tsx  index.tsx
src/routes/Search/: ComplexTaskModifier.tsx  Directories.tsx  DirectoryIO.tsx  ExtensionFilter.tsx  FileTable.tsx  InputOutputDirectory.tsx  OutputCodecs.tsx  RegularFilter.tsx  RegularFilters.tsx  SearchFileTable.tsx  SearchTable.tsx  SimpleTasksAdding.tsx  SimpleTasksModifier.tsx  constants.ts  index.less  index.tsx
src/routes/Tasks/: ComplexTaskEditor.tsx  ComplexTaskModifier.tsx  Details.tsx  FileList.tsx  GlobalOperations.tsx  Operations.tsx  Progress.tsx  RowOperations.tsx  Status.tsx  index.tsx
src/store/: app.ts  history.ts  index.ts  preset.ts  search.ts  task.ts  tasks.ts
src/tauri/: error.ts  fs.ts  particulars.ts  system.ts  task.ts  transcode.ts
src/utils/: index.ts
