[package]
name = "ffmpeg-transcoder"
version = "0.0.0"
description = "A Tauri based ffmpeg transcoder gui"
authors = ["MagicCrazyMan"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
    "window-all",
    "dialog-open",
    "shell-open",
] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.0"
log = "0.4.20"
fern = "0.6.2"
chrono = "0.4.31"
tokio = { version = "1.32.0", features = ["process", "time"] }
serde_repr = "0.1.16"
regex = "1.9.5"
uuid = { version = "1.4.1", features = ["v4", "wasm-bindgen"] }
serde_with = "3.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
